Syndicati - Feature Update
Changelog:
-Upgraded tools to JDK25
-Fixes to FaceRecognition
-Further Enhancements to JBR25/JavaFX Integration
-Batch file for Requirements.